[package]
name = "remoteify"
version = "0.1.0"
edition = "2021"
description = "Remoteify allows you to adapt Rust Linux libraries to both native and remote usage effortlessly"

[dependencies]
# api
tokio = { version = "1.38.0", features = ["fs", "io-util", "process"] }
async-trait = "0.1.81"
bytes = "1.6.0"
# native impl
nix = { version = "0.29.0", optional = true, features = ["signal"] }
# russh impl
russh = { version = "0.43.0", optional = true }
russh-keys = { version = "0.43.0", optional = true }
russh-sftp = { version = "2.0.1", optional = true }
once_cell = { version = "1.19.0", optional = true }
# openssh impl
openssh = { version = "0.10.4", optional = true }
openssh-sftp-client = { version = "0.14.4", optional = true }

[dev-dependencies]
uuid = { version = "1.9.1", features = ["v4"] }
tokio = { version = "1.38.0", features = ["macros"] }
testcontainers = "0.20.0"
remoteify = { path = ".", features = ["native", "ssh_russh", "ssh_openssh"] }

[features]
default = []
native = ["dep:nix"]
ssh_russh = ["dep:russh", "dep:russh-keys", "dep:russh-sftp", "dep:once_cell"]
ssh_openssh = ["dep:openssh", "dep:openssh-sftp-client"]
