[package]
name = "remoteify"
version = "0.1.0"
edition = "2021"
description = "Remoteify allows you to adapt Rust Linux libraries to both native and remote usage effortlessly"

[dependencies]
once_cell = { version = "1.19.0", optional = true }
# api
tokio = { version = "1.38.0", features = ["fs", "io-util", "process"] }
async-trait = "0.1.81"
bytes = "1.6.0"
bitflags = "2.6.0"
# russh impl
russh = { version = "0.43.0", optional = true }
russh-keys = { version = "0.43.0", optional = true }
russh-sftp = { version = "2.0.2", optional = true }
# openssh impl
openssh = { version = "0.10.4", optional = true }
openssh-sftp-client = { version = "0.14.5", optional = true, features = [
    "openssh",
] }
futures-util = { version = "0.3.30", optional = true }

[dev-dependencies]
uuid = { version = "1.9.1", features = ["v4"] }
tokio = { version = "1.38.0", features = ["macros"] }
testcontainers = "0.20.0"
openssh = { version = "0.10.4", features = ["native-mux"] }
remoteify = { path = ".", features = ["native", "ssh_russh", "ssh_openssh"] }
futures = "0.3.30"

[features]
default = []
native = ["dep:once_cell"]
ssh_russh = ["dep:russh", "dep:russh-keys", "dep:russh-sftp", "dep:once_cell"]
ssh_openssh = ["dep:openssh", "dep:openssh-sftp-client", "dep:futures-util"]
