[package]
name = "remoteify"
version = "0.1.0"
edition = "2021"
description = "Remoteify allows you to adapt Rust Linux libraries to both native and remote usage effortlessly"

[dependencies]
# api
tokio = { version = "1.38.0", features = ["fs", "io-util", "process"] }
async-trait = "0.1.81"
bitflags = { version = "2.6.0", optional = true }
regex = { version = "1.10.5", optional = true }
nix = { version = "0.29.0", features = ["signal"], optional = true }
# dependencies for helpers_ssh
once_cell = { version = "1.19.0", optional = true }
dashmap = { version = "6.0.1", optional = true }
bytes = { version = "1.6.1", optional = true }
shell-escape = { version = "0.1.5", optional = true }
uuid = { version = "1.9.1", features = ["v4"], optional = true }
# russh impl
russh = { version = "0.43.0", optional = true }
russh-keys = { version = "0.43.0", optional = true }
russh-sftp = { version = "2.0.3", optional = true }
# openssh impl
openssh = { version = "0.10.4", optional = true }
openssh-sftp-client = { version = "0.14.5", optional = true, features = [
    "openssh",
] }
futures-util = { version = "0.3.30", optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros"] }
testcontainers = "0.20.0"
openssh = { version = "0.10.4", features = ["native-mux"] }
remoteify = { path = ".", features = [
    "filesystem",
    "executor",
    "network",
    "impl_native",
    "impl_russh",
    "impl_openssh",
] }
futures = "0.3.30"

[features]
default = [] # do not include anything by default
# modules
filesystem = ["dep:bitflags"]
network = []
executor = ["filesystem", "dep:regex", "dep:nix"]
# implementations
impl_native = ["dep:once_cell", "dep:dashmap", "dep:bytes"]
helpers_ssh = [
    "dep:once_cell",
    "dep:dashmap",
    "dep:bytes",
    "dep:shell-escape",
    "dep:uuid",
]
impl_russh = ["helpers_ssh", "dep:russh", "dep:russh-keys", "dep:russh-sftp"]
impl_openssh = [
    "helpers_ssh",
    "dep:openssh",
    "dep:openssh-sftp-client",
    "dep:futures-util",
]
